# pyfahrplan

./: LICENSE  README.md  __main__.py  pyproject.toml
pyfahrplan/: __init__.py  config.py  lib.py  pyfahrplan.py  pyfahrplan_cli.py
tests/: test_pyfahrplan.py
tests/data/: 32.json  33.json  34.json  35.json  36.json  rc3.json  rc3_21.json  test_data.py
