[tool.poetry]
name = "pyfahrplan"
version = "1.0.12"
description = "A CCC Fahrplan CLI"
authors = ["Sascha <saschalalala@github.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/saschalalala/pyfahrplan"
keywords = ["cli", "ccc", "calendar", "console"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.0"
requests = "^2.22.0"
requests_cache = "^0.5.2"
tabulate = "^0.8.7"
python-dateutil = "^2.8.1"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
poethepoet = "^0.9.0"
pytest-cov = "^2.10.1"
requests-mock = "^1.8.0"
coverage = "^5.3.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
pyfahrplan = 'pyfahrplan.pyfahrplan:cli'

[tool.poe.tasks]
test = "pytest tests/"
coverage = "pytest --cov=pyfahrplan tests/"
